--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "stephane/more_fields",
+    "name": "stephane888/more_fields",
     "description": "more fields",
     "type": "ddrupal-custom-module",
     "license": "MIT",
