--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "stephane888/more_fields",
     "description": "more fields",
-    "type": "ddrupal-custom-module",
+    "type": "drupal-custom-module",
     "license": "MIT",
     "authors": [
         {
