add require module fullswiperoptions

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "drupal/better_exposed_filters": "^6.0"
+    "drupal/better_exposed_filters": "^6.0",
+    "habeuk/fullswiperoptions": "^1.2|dev-1x"
   }
 }
