--- a/more_fields.info.yml
+++ b/more_fields.info.yml
@@ -6,3 +6,4 @@ core_version_requirement: ^9 || ^10
 dependencies:
   - fullswiperoptions:fullswiperoptions
   - video:video
+  - layoutgenentitystyles:layoutgenentitystyles
