ajout de la dependance à php-ffmpeg/php-ffmep

--- a/more_fields.info.yml
+++ b/more_fields.info.yml
@@ -7,3 +7,4 @@ dependencies:
   - fullswiperoptions:fullswiperoptions
   - video:video
   - layoutgenentitystyles:layoutgenentitystyles
+  - more_fields:more_fields_video
