--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
   "require": {
     "drupal/better_exposed_filters": "^6.0",
     "habeuk/fullswiperoptions": "^1.2|dev-1x",
-    "drupal/video": "^3.0"
+    "drupal/video": "^3.0",
+    "php-ffmpeg/php-ffmpeg": "^0.19.0"
   }
 }
