--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,6 @@
     "drupal/better_exposed_filters": "^6.0",
     "habeuk/fullswiperoptions": "^1.2|dev-1x",
     "drupal/video": "^3.0",
-    "php-ffmpeg/php-ffmpeg": "^0.19.0"
+    "php-ffmpeg/php-ffmpeg": "^0.19.0|^v1.1.0"
   }
 }
